dhbw-mongodb/manifests/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dhbw-mongodb
    app.kubernetes.io/component: dhbw-mongodb
    app.kubernetes.io/instance: dhbw-mongodb
    app.kubernetes.io/part-of: dhbw-micro
  name: dhbw-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dhbw-mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dhbw-mongodb
    spec:
      containers:
        - image: replace/me/mongodb
          name: dhbw-mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
