dhbw-mongodb/manifests/deploy/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dhbw-mongodb
  name: dhbw-mongodb
spec:
  ports:
  - name: mongodb-ports
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: dhbw-mongodb
  type: ClusterIP
