dhbw-mongodb/manifests/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dhbw-mongodb
spec:
  rules:
    - host: dhbw-micro.info
      http:
        paths:
          - path: /mongodb
            pathType: Prefix
            backend:
              serviceName: dhbw-mongodb
              servicePort: 27017
